[package]
name = "rs_mhp3rd_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2.4"
phf = { version = "0.11.2", features = ["macros"] }
read-process-memory = "0.1.6"
sysinfo = "0.30.12"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
]
